plugins/InspectionGadgets/test/com/siyeh/igtest/portability/hardcoded_file_separators/NoCrashOnUnclosedLiteral.java
class F {
  {
    <error descr="Unclosed character literal">'/</error><EOLError descr="';' expected"></EOLError>
  }
}